@@ -1,3 +1,7 @@
+2007-01-21  Damon Chaplin  <damon@gnome.org>
+
+	* gtk-doc-manual.xml: document "@include:" tag. #395023
+
 2006-12-10  J.H.M. Dassen (Ray) <jdassen@debian.org>
 
 	* gtk-doc-manual.xml: Spelling fixes.
